# gitstackprod

./: README.md  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: layout.tsx  page.tsx
app/api/getConvexUserId/: route.ts
app/auth-success/: page.tsx
app/dashboard/: page.tsx
app/sign-up/[[...rest]]/: page.tsx
components/: mode-toggle.tsx  theme-provider.tsx
convex/: schema.ts  users.ts
gitstack/: main.py
utils/: auth.ts
