[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitstack"
version = "0.1.0"
description = "Gitstack: Version everything. An open-source versioning tool for entire project environments."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Bola Banjo", email = "bola@example.com" }
]
keywords = ["version-control", "git", "snapshots", "cli", "devtools", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "python-dotenv>=0.19"
]

[project.scripts]
gitstack = "gitstack.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitstack*"]
